--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,10 +3,119 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="css/common.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="js/app_order.js" type="module"></script>
     <title>QR Code Bartender</title>
 </head>
 <body>
-    
+    <!-- App -->
+    <div class="container-fluid vh-100 py-3">
+        <div id="menu" class="accordion pb-5"></div>
+        <div id="cart-bar" class="d-none container-fluid fixed-bottom bg-primary px-0">
+            <button type="button" class="btn btn-primary w-100" data-bs-toggle="modal" data-bs-target="#show-cart-modal">
+                <i class="bi bi-cart"></i>
+                <span data-i18n="order:display-cart">Display your cart</span>
+                <span id="cart-quantity" class="badge text-bg-secondary">0</span>
+            </button>
+        </div>
+    </div>
+    <!-- Templates for menu parts -->
+    <template id="menu-category-template">
+        <div class="accordion-item">
+            <h2 class="accordion-header menu-category-header">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"></button>
+            </h2>
+            <div class="accordion-collapse collapse menu-category-block" data-bs-parent="#menu">
+                <div class="accordion-body d-flex flex-wrap justify-content-around justify-content-xl-start"></div>
+            </div>
+        </div>
+    </template>
+    <template id="menu-item-template">
+        <div class="card m-3 position-relative" style="width: 18rem;">
+            <img class="card-img-top img-cover" style="height: 10rem;">
+            <div class="card-body" style="height: 8rem;">
+                <h5 class="card-title text-truncate"></h5>
+                <p class="card-text p-ellipsis-3 fst-italic"></p>
+            </div>
+            <div class="position-absolute" style="position: absolute; right: 1rem; top: 1rem;">
+                <button type="button" class="btn btn-primary add-to-cart-btn"><i class="bi bi-cart-plus"></i></button>
+            </div>
+        </div>
+    </template>
+    <!-- Templates for options -->
+    <template id="switch-template">
+        <div class="form-check form-switch mb-3">
+            <input type="checkbox" role="switch" class="form-check-input">
+            <label class="form-check-label"></label>
+        </div>
+    </template>
+    <template id="select-template">
+        <div class="mb-3">
+            <select class="form-select" required></select>
+        </div>
+    </template>
+    <!-- Modal to add items to the cart -->
+    <div id="add-item-modal" class="modal fade" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title"></h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="container-fluid">
+                        <div class="row">
+                            <img id="add-item-modal-img" class="col-5">
+                            <div class="col-7">
+                                <div id="add-item-modal-description" class="fst-italic mb-2"></div>
+                                <div>
+                                    <h6 data-i18n="order:choose-options">Choose your options</h6>
+                                    <form id="add-item-modal-options"></form>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" data-i18n="cancel">Cancel</button>
+                    <button type="button" id="add-item-modal-submit" class="btn btn-primary" data-i18n="order:add-to-cart">Add to cart</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Modal to show the cart -->
+    <div id="show-cart-modal" class="modal fade" tabindex="-1">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" data-i18n="order:your-cart">Your cart</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="list-group list-group-flush list-cart-items"></div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" data-i18n="close">Close</button>
+                    <button type="button" id="add-item-modal-submit" class="btn btn-primary" data-i18n="order:send-order">Send order</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <template id="cart-item-template">
+        <div class="list-group-item">
+            <div class="d-flex justify-content-between">
+                <div class="cart-item-name flex-grow-1 text-truncate"></div>
+                <div class="list-group list-group-horizontal ms-2">
+                    <button type="button" class="list-group-item remove-one-cart-item-btn"><i class="bi bi-dash-lg"></i></button>
+                    <div class="list-group-item cart-item-quantity"></div>
+                    <button type="button" class="list-group-item add-one-cart-item-btn"><i class="bi bi-plus-lg"></i></button>
+                </div>
+            </div>
+            <div class="cart-item-options fst-italic"></div>
+        </div>
+    </template>
 </body>
 </html>
