Frontend: fix modal button id

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -99,7 +99,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" data-i18n="close">Close</button>
-                    <button type="button" id="add-item-modal-submit" class="btn btn-primary" data-i18n="order:send-order">Send order</button>
+                    <button type="button" id="show-cart-modal-submit" class="btn btn-primary" data-i18n="order:send-order">Send order</button>
                 </div>
             </div>
         </div>
