--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -20,8 +20,8 @@
             <div class="admin-navbar-element flex-grow-1 d-flex align-items-center justify-content-around" data-app-target="#admin-options"><i class="bi bi-toggles"></i></div>
         </nav>
         <div id="admin-main-app" class="container-fluid flex-grow-1 bg-body-secondary overflow-scroll py-3">
-            <div id="admin-orders" class="d-flex flex-column"></div>
-            <div id="admin-menu" class="accordion pb-5"></div>
+            <div id="admin-orders" class="current-tab"><div class="d-flex flex-column"></div></div>
+            <div id="admin-menu"><div class="accordion pb-5"></div></div>
             <div id="admin-options"></div>
         </div>
     </div>
