Frontend: show notification for client's orders status

--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -30,7 +30,7 @@
         <div class="card mb-2 order-card fade show">
             <div class="card-header d-flex">
                 <div class="order-title flex-grow-1">
-                    <span data-i18n="admin:order-number">Order #</span><span class="order-number"></span>
+                    <span data-i18n="order-number">Order #</span><span class="order-number"></span>
                     &ndash;
                     <span class="order-client-name"></span>
                     @
