admin tab + remove button

--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -21,8 +21,8 @@
         </nav>
         <div id="admin-main-app" class="container-fluid flex-grow-1 bg-body-secondary overflow-scroll py-3">
             <div id="admin-orders" class="current-tab"><div class="d-flex flex-column"></div></div>
-            <div id="admin-menu"><div class="accordion pb-5"></div></div>
-            <div id="admin-options"></div>
+            <div id="admin-menu" class=""><div class="accordion pb-5"></div></div>
+            <div id="admin-options" class=""></div>
         </div>
     </div>
     <!-- Template for orders -->
@@ -84,7 +84,7 @@
                 <p class="card-text p-ellipsis-3 fst-italic"></p>
             </div>
             <div class="position-absolute" style="position: absolute; right: 1rem; top: 1rem;">
-                <button type="button" class="btn btn-primary add-to-cart-btn"><i class="bi bi-cart-plus"></i></button>
+                <button type="button" class="btn btn-danger disable-item-btn"><i class="bi bi-dash-circle"></i></button>
             </div>
         </div>
     </template>
